<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ua.in.cleaning.ui.home.HomeFragment"
        android:label= "@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_no_publish"
        android:name="ua.in.cleaning.ui.noPublish.NoPublishFragment"
        android:label= "@string/menu_no_publish"
        tools:layout="@layout/fragment_no_publish" />

    <fragment
        android:id="@+id/nav_publish"
        android:name="ua.in.cleaning.ui.publish.PublishFragment"
        android:label="@string/menu_publish"
        tools:layout="@layout/fragment_publish" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ua.in.cleaning.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ua.in.cleaning.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ua.in.cleaning.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>